Add service provider API type and initialise service providers using an operator
