# pkg/apiclient/operations/list_service_providers_responses.go
@@ -1,0 +1,162 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"fmt"
+	"io"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/appvia/kore/pkg/apiclient/models"
+)
+
+// ListServiceProvidersReader is a Reader for the ListServiceProviders structure.
+type ListServiceProvidersReader struct {
+	formats strfmt.Registry
+}
+
+// ReadResponse reads a server response into the received o.
+func (o *ListServiceProvidersReader) ReadResponse(response runtime.ClientResponse, consumer runtime.Consumer) (interface{}, error) {
+	switch response.Code() {
+	case 200:
+		result := NewListServiceProvidersOK()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return result, nil
+	case 401:
+		result := NewListServiceProvidersUnauthorized()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+	case 403:
+		result := NewListServiceProvidersForbidden()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+	case 500:
+		result := NewListServiceProvidersInternalServerError()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+
+	default:
+		return nil, runtime.NewAPIError("unknown error", response, response.Code())
+	}
+}
+
+// NewListServiceProvidersOK creates a ListServiceProvidersOK with default headers values
+func NewListServiceProvidersOK() *ListServiceProvidersOK {
+	return &ListServiceProvidersOK{}
+}
+
+/*ListServiceProvidersOK handles this case with default header values.
+
+A list of service providers
+*/
+type ListServiceProvidersOK struct {
+	Payload *models.V1ServiceProviderList
+}
+
+func (o *ListServiceProvidersOK) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceproviders][%d] listServiceProvidersOK  %+v", 200, o.Payload)
+}
+
+func (o *ListServiceProvidersOK) GetPayload() *models.V1ServiceProviderList {
+	return o.Payload
+}
+
+func (o *ListServiceProvidersOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	o.Payload = new(models.V1ServiceProviderList)
+
+	// response payload
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
+		return err
+	}
+
+	return nil
+}
+
+// NewListServiceProvidersUnauthorized creates a ListServiceProvidersUnauthorized with default headers values
+func NewListServiceProvidersUnauthorized() *ListServiceProvidersUnauthorized {
+	return &ListServiceProvidersUnauthorized{}
+}
+
+/*ListServiceProvidersUnauthorized handles this case with default header values.
+
+If not authenticated
+*/
+type ListServiceProvidersUnauthorized struct {
+}
+
+func (o *ListServiceProvidersUnauthorized) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceproviders][%d] listServiceProvidersUnauthorized ", 401)
+}
+
+func (o *ListServiceProvidersUnauthorized) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewListServiceProvidersForbidden creates a ListServiceProvidersForbidden with default headers values
+func NewListServiceProvidersForbidden() *ListServiceProvidersForbidden {
+	return &ListServiceProvidersForbidden{}
+}
+
+/*ListServiceProvidersForbidden handles this case with default header values.
+
+If authenticated but not authorized
+*/
+type ListServiceProvidersForbidden struct {
+}
+
+func (o *ListServiceProvidersForbidden) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceproviders][%d] listServiceProvidersForbidden ", 403)
+}
+
+func (o *ListServiceProvidersForbidden) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewListServiceProvidersInternalServerError creates a ListServiceProvidersInternalServerError with default headers values
+func NewListServiceProvidersInternalServerError() *ListServiceProvidersInternalServerError {
+	return &ListServiceProvidersInternalServerError{}
+}
+
+/*ListServiceProvidersInternalServerError handles this case with default header values.
+
+A generic API error containing the cause of the error
+*/
+type ListServiceProvidersInternalServerError struct {
+	Payload *models.ApiserverError
+}
+
+func (o *ListServiceProvidersInternalServerError) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceproviders][%d] listServiceProvidersInternalServerError  %+v", 500, o.Payload)
+}
+
+func (o *ListServiceProvidersInternalServerError) GetPayload() *models.ApiserverError {
+	return o.Payload
+}
+
+func (o *ListServiceProvidersInternalServerError) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	o.Payload = new(models.ApiserverError)
+
+	// response payload
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
+		return err
+	}
+
+	return nil
+}
