# pkg/apiserver/teams.go
@@ -918,7 +918,7 @@ func (u teamHandler) getTeamServicePlanDetails(req *restful.Request, resp *restf
 			return fmt.Errorf("provider not found for service kind %q", servicePlan.Spec.Kind)
 		}
 
-		schema, err := provider.JSONSchema(servicePlan.Spec.Kind, servicePlan.Name)
+		schema, err := provider.PlanJSONSchema(servicePlan.Spec.Kind, servicePlan.Name)
 		if err != nil {
 			return err
 		}
